<resources>
    <string name="app_name">WeiboMVP</string>
    <string name="weibo">微博</string>
    <string name="follow">关注</string>
    <string name="follower">粉丝</string>
    <string name="often_visit_homepage">我最经常访问的主页</string>
    <string name="often_visit">经常访问</string>
    <string name="no_user_desc">暂无介绍</string>
    <string name="albums">我的相册</string>
    <string name="my_story">我的故事</string>
    <string name="likes">我的赞</string>
    <string name="fans_service">粉丝服务</string>
    <string name="weibo_wallet">微博钱包</string>
    <string name="weibo_store">微博优选</string>
    <string name="fanstop">粉丝头条</string>
    <string name="help">帮助</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_search">搜索</string>
    <string name="tab_message">消息</string>
    <string name="tab_me">我</string>
    <string name="attention">关注</string>
    <string name="hot">热门</string>
    <string name="transpond">转发 %d</string>
    <string name="comment">评论 %d</string>
    <string name="like">赞 %d</string>
    <string name="seconds_before">%d秒前</string>
    <string name="minutes_before">%d分钟前</string>
    <string name="hours_before">%d小时前</string>
    <string name="default_group">默认分组</string>
    <string name="my_group">我的分组</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="add_group">+新建分组</string>
    <string name="title_add_group">新建分组</string>
    <string name="hint_edit_add_group">1-16个字符</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="add_group_no_content">分组名称不能为空</string>
    <string name="group_name_exists">此分组名已存在(20608)</string>
    <string name="my_category">我的分类</string>
    <string name="clickforcategory">点击进入频道</string>
    <string name="clickforaddcategory">点击添加分类</string>
</resources>
