<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@color/tab_bg"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@color/tab_bg">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="0dp"
            android:layout="@layout/tab_home"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="0dp"
            android:icon="@drawable/tab_video"
            android:text="@string/tab_video"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_search"
            android:text="@string/tab_search"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="0dp"
            android:icon="@drawable/tab_message"
            android:text="@string/tab_message"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="0dp"
            android:icon="@drawable/tab_me"
            android:text="@string/tab_me"/>
    </com.google.android.material.tabs.TabLayout>

</LinearLayout>