<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/width_dialog_add_group"
    android:layout_height="@dimen/height_dialog_add_group"
    android:background="@drawable/bg_dialog_add_group">
    <!-- title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:text="@string/title_add_group"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/textsize_title_add_group"
        android:textStyle="bold"
        android:gravity="center_horizontal|bottom"/>
    <!-- 编辑框 -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_dialog_add_group"
        android:paddingRight="@dimen/padding_dialog_add_group"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bg_edit_add_group"
            android:textSize="@dimen/textsize_edit_add_group"
            android:textColor="@color/textcolor"
            android:hint="@string/hint_edit_add_group"
            android:textColorHint="@color/hintcolor"/>
        <TextView
            android:id="@+id/tv_hint_no_content"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/add_group_no_content"
            android:textSize="@dimen/textsize_edit_add_group"
            android:textColor="@color/textcolor_add_group_no_content"
            android:gravity="center_vertical"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/hintbgcolor"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/hintcolor"
            android:gravity="center"
            android:background="@drawable/bg_cancel_edit_add_group"/>
        <LinearLayout
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:background="@color/hintbgcolor"/>
        <TextView
            android:id="@+id/sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sure"
            android:textColor="@color/tintcolor"
            android:gravity="center"
            android:background="@drawable/bg_sure_edit_add_group"/>
    </LinearLayout>

</LinearLayout>