<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_dialog_attention_fragment_me"
    android:background="@color/white"
    android:id="@+id/rl">
    <!-- 我的分类 -->
    <TextView
        android:id="@+id/tv_my_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_category"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        style="@style/hinttext_dialog_attention_fragment_me"
        android:layout_marginTop="@dimen/margintop_tv_default_group"
        android:layout_marginBottom="@dimen/marginbottom_tv_default_group"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickforcategory"
        android:textColor="@color/hintcolor"
        android:layout_toRightOf="@+id/tv_my_category"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_alignBottom="@+id/tv_my_category"/>
    <TextView
        android:id="@+id/tv_edit"
        android:text="@string/edit"
        android:textColor="@color/tintcolor"
        android:layout_toLeftOf="@+id/iv_cancel"
        style="@style/hinttext_dialog_attention_fragment_me"
        android:layout_alignBottom="@+id/tv_my_category"/>
    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="@dimen/size_20"
        android:layout_height="@dimen/size_20"
        android:layout_alignBottom="@+id/tv_my_category"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/icon_tab_add" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_my_category"/>
    <TextView
        android:id="@+id/tv_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickforaddcategory"
        android:layout_below="@+id/rv_my_category"
        android:layout_alignParentLeft="true"
        style="@style/hinttext_dialog_attention_fragment_me"
        android:layout_marginTop="@dimen/margintop_tv_default_group"
        android:layout_marginBottom="@dimen/marginbottom_tv_default_group"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_add_category"/>

</RelativeLayout>
</ScrollView>